<resources>
    <string name="app_name">SMSAlert</string>
    <string name="action_settings">Settings</string>

    <string name="available_accounts">Available Accounts</string>
    <string name="proceed">Proceed</string>
    <string name="please_select_1_account">Please select 1 account</string>
    <string name="account_logo">Bank Logo</string>
    <string name="title_activity_alert_amount">Alert Amounts</string>

    <string name="credit_balance">TOTAL CREDIT BALANCE</string>
    <string name="dedit_balance">TOTAL DEBIT BALANCE</string>

    <string name="u20a61_000_000">₦1,000,000</string>
    <string name="amount_format_string">₦%1$s</string>
</resources>
